[gd_scene load_steps=57 format=2]

[ext_resource path="res://assets/images/gui/explore/bgroup_panel_portrait_default.png" type="Texture" id=1]
[ext_resource path="res://assets/images/gui/explore/bgroup_panel_portrait_pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/images/gui/explore/bgroup_panel_portrait_hover.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/explore/bgroup_panel_portraitbig_back.png" type="Texture" id=4]
[ext_resource path="res://assets/images/bg/forest.png" type="Texture" id=5]
[ext_resource path="res://assets/images/portrait/ArronNormal.png" type="Texture" id=6]
[ext_resource path="res://assets/images/gui/explore/bgroup_panel_portraitsmall.png" type="Texture" id=7]
[ext_resource path="res://files/scenes/ExplorationMenu.gd" type="Script" id=8]
[ext_resource path="res://files/CharDragNode.gd" type="Script" id=9]
[ext_resource path="res://assets/images/buttons/explore/tick_active.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/pt_20.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/themes/scroll_grey.tres" type="Theme" id=12]
[ext_resource path="res://assets/themes/button_location.tres" type="Theme" id=13]
[ext_resource path="res://assets/fonts/pt_24.tres" type="DynamicFont" id=14]
[ext_resource path="res://assets/images/gui/explore/zone_panel_mission.png" type="Texture" id=15]
[ext_resource path="res://assets/images/combat_load/displaced.png" type="Texture" id=16]
[ext_resource path="res://assets/images/gui/explore/bgroup_bg.png" type="Texture" id=17]
[ext_resource path="res://assets/images/buttons/explore/bar_dungeon_filler.png" type="Texture" id=18]
[ext_resource path="res://assets/fonts/pt_14.tres" type="DynamicFont" id=19]
[ext_resource path="res://assets/fonts/pt_30_boldshad.tres" type="DynamicFont" id=20]
[ext_resource path="res://files/scenes/FullStateCheck_del.gd" type="Script" id=21]
[ext_resource path="res://assets/themes/button_round.tres" type="Theme" id=22]
[ext_resource path="res://assets/images/gui/explore/bgroup_panel_portraitsmall_pressed.png" type="Texture" id=23]
[ext_resource path="res://assets/images/gui/explore/bgroup_panel_portraitsmall_hover.png" type="Texture" id=24]
[ext_resource path="res://assets/images/gui/explore/bgroup_panel_about.png" type="Texture" id=25]
[ext_resource path="res://files/scenes/ExploreDropScreen.gd" type="Script" id=26]
[ext_resource path="res://assets/images/gui/explore/zone_panel_about.png" type="Texture" id=27]
[ext_resource path="res://assets/images/gui/explore/zone_panel_name_mission.png" type="Texture" id=28]
[ext_resource path="res://assets/images/gui/explore/zone_panel_bg.png" type="Texture" id=29]
[ext_resource path="res://assets/images/gui/explore/bgroup_panel.png" type="Texture" id=30]
[ext_resource path="res://assets/images/gui/explore/bgroup_panel_portraitsmall_back.png" type="Texture" id=31]
[ext_resource path="res://assets/themes/button_small.tres" type="Theme" id=32]
[ext_resource path="res://assets/images/gui/menu/confirmpanel.png" type="Texture" id=33]
[ext_resource path="res://assets/images/buttons/explore/bar_dungeon_under.png" type="Texture" id=34]
[ext_resource path="res://tooltip_theme.tres" type="Theme" id=35]
[ext_resource path="res://assets/images/buttons/explore/tick_inactive_disabled.png" type="Texture" id=36]
[ext_resource path="res://assets/images/buttons/explore/tick_inactive_hover.png" type="Texture" id=37]
[ext_resource path="res://assets/images/buttons/explore/tick_inactive.png" type="Texture" id=38]
[ext_resource path="res://assets/images/buttons/explore/tick_active_hover.png" type="Texture" id=39]
[ext_resource path="res://files/scenes/FullStateCheck.gd" type="Script" id=40]
[ext_resource path="res://assets/images/buttons/explore/tick_active_disabled.png" type="Texture" id=41]
[ext_resource path="res://assets/images/combat_load/caves.png" type="Texture" id=42]
[ext_resource path="res://assets/images/combat_load/bar_fill.png" type="Texture" id=43]
[ext_resource path="res://assets/images/combat_load/frame.png" type="Texture" id=44]
[ext_resource path="res://assets/images/combat_load/bar_back.png" type="Texture" id=45]
[ext_resource path="res://files/scenes/fake_load.gd" type="Script" id=46]
[ext_resource path="res://assets/images/combat_load/city.png" type="Texture" id=47]
[ext_resource path="res://assets/images/combat_load/forest.png" type="Texture" id=48]
[ext_resource path="res://assets/images/combat_load/mountains.png" type="Texture" id=49]
[ext_resource path="res://assets/images/combat_load/desert.png" type="Texture" id=50]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 37 )
region_rect = Rect2( 0, 0, 40, 40 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 40, 40 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 36 )
region_rect = Rect2( 0, 0, 40, 40 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 39 )
region_rect = Rect2( 0, 0, 40, 40 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 38 )
region_rect = Rect2( 0, 0, 40, 40 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="ExplorationSelect" type="TextureRect" parent="."]
margin_left = 62.2006
margin_top = 51.327
margin_right = 948.201
margin_bottom = 1031.33
texture = ExtResource( 15 )

[node name="head" type="Label" parent="ExplorationSelect"]
margin_left = 316.0
margin_top = 14.0
margin_right = 569.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 20 )
text = "Location name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="ExplorationSelect"]
show_behind_parent = true
margin_left = 18.0
margin_top = 50.0
margin_right = 869.0
margin_bottom = 977.0
texture = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about" type="TextureRect" parent="ExplorationSelect"]
margin_left = 50.0
margin_top = 101.0
margin_right = 835.0
margin_bottom = 587.0
texture = ExtResource( 27 )

[node name="level" type="Label" parent="ExplorationSelect/about"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -84.0
margin_top = -4.0
margin_right = 86.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 14 )
text = "Level 10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="ExplorationSelect/about"]
show_behind_parent = true
margin_left = 18.0
margin_top = 34.0
margin_right = 440.0
margin_bottom = 452.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desc" type="RichTextLabel" parent="ExplorationSelect/about"]
margin_left = 466.0
margin_top = 34.0
margin_right = 760.0
margin_bottom = 451.0
custom_fonts/normal_font = ExtResource( 11 )
text = "Information about zone"

[node name="progress" type="TextureProgress" parent="ExplorationSelect/about"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -318.0
margin_top = 456.0
margin_right = 321.0
margin_bottom = 474.0
value = 50.0
texture_under = ExtResource( 34 )
texture_progress = ExtResource( 18 )

[node name="Label" type="Label" parent="ExplorationSelect/about/progress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -12.0
margin_right = 22.0
margin_bottom = 12.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 19 )
text = "1/10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="missions" type="TextureRect" parent="ExplorationSelect"]
margin_left = 60.0
margin_top = 652.0
margin_right = 825.0
margin_bottom = 862.0
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="ExplorationSelect/missions"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ExplorationSelect/missions/ScrollContainer"]
margin_right = 725.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_constants/margin_right = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ExplorationSelect/missions/ScrollContainer/MarginContainer"]
margin_right = 705.0
margin_bottom = 56.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Button" type="Button" parent="ExplorationSelect/missions/ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 705.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 54 )
theme = ExtResource( 13 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 14 )
toggle_mode = true
text = "Quest Name"

[node name="Completed" type="TextureRect" parent="ExplorationSelect/missions/ScrollContainer/MarginContainer/VBoxContainer/Button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -20.0
margin_right = -20.0
margin_bottom = 20.0
hint_tooltip = "TOOLTIPMFINISED"
theme = ExtResource( 35 )
texture = ExtResource( 10 )

[node name="Close" type="Button" parent="ExplorationSelect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -113.5
margin_top = -105.0
margin_right = 116.5
margin_bottom = -55.0
theme = ExtResource( 22 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleGroup" type="TextureRect" parent="."]
margin_left = 995.698
margin_top = 51.327
margin_right = 1881.7
margin_bottom = 1031.33
texture = ExtResource( 30 )

[node name="bg" type="TextureRect" parent="BattleGroup"]
show_behind_parent = true
margin_left = 19.0
margin_top = 37.0
margin_right = 870.0
margin_bottom = 964.0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BattleGroup"]
margin_left = 304.0
margin_top = 17.0
margin_right = 571.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 20 )
text = "Battle group"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about_bg" type="TextureRect" parent="BattleGroup"]
margin_left = 485.0
margin_top = 102.0
margin_right = 825.0
margin_bottom = 472.0
texture = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about" type="RichTextLabel" parent="BattleGroup/about_bg"]
margin_left = 34.0
margin_top = 28.0
margin_right = 308.0
margin_bottom = 311.0
custom_fonts/normal_font = ExtResource( 11 )
text = "Area Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScaleCheck" type="CheckBox" parent="BattleGroup"]
margin_left = 683.975
margin_top = 422.289
margin_right = 723.975
margin_bottom = 462.289
hint_tooltip = "TOOLTIPSCALELVL"
focus_mode = 0
theme = ExtResource( 35 )
custom_icons/checked_disabled = SubResource( 1 )
custom_icons/checked = SubResource( 1 )
custom_icons/unchecked_disabled = SubResource( 1 )
custom_icons/unchecked = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/hover_pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
script = ExtResource( 40 )
disable_normal = ExtResource( 36 )
disable_pressed = ExtResource( 41 )

[node name="Label2" type="Label" parent="BattleGroup/ScaleCheck"]
margin_left = -133.975
margin_top = -3.28894
margin_right = -1.97534
margin_bottom = 42.7111
hint_tooltip = "TOOLTIPSCALELVL"
mouse_filter = 1
theme = ExtResource( 35 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 14 )
text = "Scale level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScaleCheck-del" type="Button" parent="BattleGroup"]
visible = false
margin_left = 683.975
margin_top = 422.289
margin_right = 723.975
margin_bottom = 462.289
hint_tooltip = "TOOLTIPSCALELVL"
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="BattleGroup/ScaleCheck-del"]
margin_left = -133.975
margin_top = -3.28894
margin_right = -1.97534
margin_bottom = 42.7111
hint_tooltip = "TOOLTIPSCALELVL"
mouse_filter = 1
theme = ExtResource( 35 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 14 )
text = "Scale level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="BattleGroup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -113.5
margin_top = -106.0
margin_right = 116.5
margin_bottom = -56.0
theme = ExtResource( 22 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="advance" type="Button" parent="BattleGroup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -238.0
margin_top = -106.0
margin_right = -8.0
margin_bottom = -56.0
theme = ExtResource( 22 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "Advance"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="abandon" type="Button" parent="BattleGroup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -106.0
margin_right = 238.0
margin_bottom = -56.0
theme = ExtResource( 22 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "Abandon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screen" type="TextureRect" parent="BattleGroup"]
visible = false
margin_left = -992.0
margin_top = -70.0
margin_right = 964.0
margin_bottom = 1050.0
mouse_filter = 0
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="party" type="HBoxContainer" parent="BattleGroup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 105.0
margin_top = 562.0
margin_right = -161.0
margin_bottom = -138.0
custom_constants/separation = 65

[node name="Button1" type="TextureButton" parent="BattleGroup/party"]
margin_right = 180.0
margin_bottom = 287.0
rect_min_size = Vector2( 0, 200 )
button_mask = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
script = ExtResource( 9 )
pos = 1

[node name="back" type="TextureRect" parent="BattleGroup/party/Button1"]
show_behind_parent = true
margin_left = 2.0
margin_top = 28.0
margin_right = 178.0
margin_bottom = 245.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="BattleGroup/party/Button1"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 180, 180 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="BattleGroup/party/Button1"]
margin_right = 177.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 11 )
text = "name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="BattleGroup/party/Button1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_bottom = -13.0
custom_fonts/font = ExtResource( 11 )
text = "Lv 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="BattleGroup/party"]
margin_left = 245.0
margin_right = 425.0
margin_bottom = 287.0
rect_min_size = Vector2( 0, 200 )
button_mask = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
script = ExtResource( 9 )
pos = 2

[node name="back" type="TextureRect" parent="BattleGroup/party/Button2"]
show_behind_parent = true
margin_left = 2.0
margin_top = 28.0
margin_right = 178.0
margin_bottom = 245.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="BattleGroup/party/Button2"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 180, 180 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="BattleGroup/party/Button2"]
margin_right = 177.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 11 )
text = "name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="BattleGroup/party/Button2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_bottom = -13.0
custom_fonts/font = ExtResource( 11 )
text = "Lv 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="TextureButton" parent="BattleGroup/party"]
margin_left = 490.0
margin_right = 670.0
margin_bottom = 287.0
rect_min_size = Vector2( 0, 200 )
button_mask = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
script = ExtResource( 9 )
pos = 3

[node name="back" type="TextureRect" parent="BattleGroup/party/Button3"]
show_behind_parent = true
margin_left = 2.0
margin_top = 28.0
margin_right = 178.0
margin_bottom = 245.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="BattleGroup/party/Button3"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 180, 180 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="BattleGroup/party/Button3"]
margin_right = 177.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 11 )
text = "name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="BattleGroup/party/Button3"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_bottom = -13.0
custom_fonts/font = ExtResource( 11 )
text = "Lv 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roster" type="GridContainer" parent="BattleGroup"]
margin_left = 60.0
margin_top = 102.0
margin_right = 421.0
margin_bottom = 472.0
custom_constants/vseparation = 20
custom_constants/hseparation = 15
columns = 3

[node name="Button" type="TextureButton" parent="BattleGroup/roster"]
margin_right = 110.0
margin_bottom = 175.0
button_mask = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 24 )
script = ExtResource( 9 )

[node name="back" type="TextureRect" parent="BattleGroup/roster/Button"]
show_behind_parent = true
margin_left = 3.0
margin_top = 19.0
margin_right = 107.0
margin_bottom = 150.0
texture = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="BattleGroup/roster/Button"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="BattleGroup/roster/Button"]
anchor_right = 1.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 19 )
text = "name"
align = 1
valign = 1

[node name="level" type="Label" parent="BattleGroup/roster/Button"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
custom_fonts/font = ExtResource( 19 )
text = "Lv 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdvConfirm(del)" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="panel" type="TextureRect" parent="AdvConfirm(del)"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -119.0
margin_right = 236.0
margin_bottom = 58.0
mouse_filter = 0
texture = ExtResource( 33 )
expand = true

[node name="Label" type="Label" parent="AdvConfirm(del)/panel"]
anchor_right = 1.0
margin_top = 48.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Advance further?"
align = 1

[node name="ok" type="Button" parent="AdvConfirm(del)/panel"]
margin_left = 35.0
margin_top = 98.0
margin_right = 188.0
margin_bottom = 146.0
theme = ExtResource( 32 )
text = "yes"

[node name="no" type="Button" parent="AdvConfirm(del)/panel"]
margin_left = 280.0
margin_top = 98.0
margin_right = 433.0
margin_bottom = 146.0
theme = ExtResource( 32 )
text = "no"

[node name="fake_load" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 46 )
bg_forest = ExtResource( 48 )
bg_cave = ExtResource( 42 )
bg_town = ExtResource( 50 )
bg_castle = ExtResource( 48 )
bg_mountains = ExtResource( 49 )
bg_cult = ExtResource( 50 )
bg_modern_city = ExtResource( 47 )

[node name="bg" type="TextureRect" parent="fake_load"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 42 )

[node name="displaced" type="TextureRect" parent="fake_load"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -337.0
margin_top = -99.5
margin_right = 337.0
margin_bottom = 99.5
texture = ExtResource( 16 )

[node name="frame" type="TextureRect" parent="fake_load"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 44 )

[node name="progress" type="TextureProgress" parent="fake_load"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -611.5
margin_top = -104.0
margin_right = 611.5
margin_bottom = -56.0
value = 90.0
texture_under = ExtResource( 45 )
texture_progress = ExtResource( 43 )
texture_progress_offset = Vector2( 29, 5 )

[node name="press_key" type="Label" parent="fake_load"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -85.0
margin_top = -56.0
margin_right = 85.0
margin_bottom = -32.0
grow_horizontal = 2
text = "PRESSANYKEY"
